# learn_wgpu

./: Cargo.toml  build_android.sh
.cargo/: config.toml
src/: lib.rs  main.rs
src/app/: mod.rs  shader.wgsl
